; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-import-dump.c_process_api_uvars_row.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-import-dump.c_process_api_uvars_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@I = common dso_local global i64* null, align 8
@S = common dso_local global i64* null, align 8
@write_buffer = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [17 x i8] c"lu%lld.%lld.%lld\00", align 1
@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"store: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @process_api_uvars_row() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = load i64*, i64** @I, align 8
  %7 = getelementptr inbounds i64, i64* %6, i64 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %1, align 8
  %9 = load i64*, i64** @S, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 1
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %2, align 8
  %13 = load i64, i64* %1, align 8
  %14 = sdiv i64 %13, 1000000000000
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %1, align 8
  %16 = sdiv i64 %15, 1000
  %17 = srem i64 %16, 1000000000
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %1, align 8
  %19 = srem i64 %18, 1000
  store i64 %19, i64* %5, align 8
  %20 = load i8*, i8** @write_buffer, align 8
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @sprintf(i8* %20, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %21, i64 %22, i64 %23)
  %25 = load i32, i32* @verbosity, align 4
  %26 = icmp sgt i32 %25, 1
  br i1 %26, label %27, label %31

27:                                               ; preds = %0
  %28 = load i32, i32* @stderr, align 4
  %29 = load i8*, i8** @write_buffer, align 8
  %30 = call i32 @fprintf(i32 %28, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* %29)
  br label %31

31:                                               ; preds = %27, %0
  %32 = load i8*, i8** @write_buffer, align 8
  %33 = load i8*, i8** %2, align 8
  %34 = call i32 @do_store(i8* %32, i8* %33)
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i64, i64, i64) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @do_store(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
